# LR-7-8

./: CMakeLists.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt  utils.h
src/adapter/: BookAdapter.h
src/book/: Book.h  FictionBook.h  ScienceBook.h
tests/: CMakeLists.txt  test_book.cpp  test_book_adapter.cpp  test_fiction_book.cpp  test_science_book.cpp  test_utils.cpp
